Survey, feather weight java

--- a/OTONO2016/1/Survey/bib.bib
+++ b/OTONO2016/1/Survey/bib.bib
@@ -1,3 +1,23 @@
+@article{FJ,
+ author = {Igarashi, Atsushi and Pierce, Benjamin C. and Wadler, Philip},
+ title = {Featherweight Java: A Minimal Core Calculus for Java and GJ},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {May 2001},
+ volume = {23},
+ number = {3},
+ month = may,
+ year = {2001},
+ issn = {0164-0925},
+ pages = {396--450},
+ numpages = {55},
+ url = {http://doi.acm.org/10.1145/503502.503505},
+ doi = {10.1145/503502.503505},
+ acmid = {503505},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Compilation, Java, generic classes, language design, language semantics},
+} 
+
 @inproceedings{OOSOFHl,
 author = {Mark Shields, Simon Peyton Jones},
 title = {Object-Oriented Style Overloading for Haskell},
@@ -8,6 +28,24 @@ publisher = {},
 url = {https://www.microsoft.com/en-us/research/publication/object-oriented-style-overloading-for-haskell/},
 address = {},
 }
+
+@inproceedings{FJM,
+ author = {Bettini, Lorenzo and Capecchi, Sara and Venneri, Betti},
+ title = {Featherweight Java with Multi-methods},
+ booktitle = {Proceedings of the 5th International Symposium on Principles and Practice of Programming in Java},
+ series = {PPPJ '07},
+ year = {2007},
+ isbn = {978-1-59593-672-1},
+ location = {Lisboa, Portugal},
+ pages = {83--92},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1294325.1294337},
+ doi = {10.1145/1294325.1294337},
+ acmid = {1294337},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamic overloading, featherweight Java, language extensions, multi-methods},
+} 
 
 @article{BETTINI2009261,
 title = "Featherweight Java with dynamic and static overloading",
