14 de julio, vamos!!!

--- a/OTONO2016/1/Survey/bib.bib
+++ b/OTONO2016/1/Survey/bib.bib
@@ -1,3 +1,23 @@
+@article{Bobrow:1988:CLO:885631.885632,
+ author = {Bobrow, Daniel G. and DeMichiel, Linda G. and Gabriel, Richard P. and Keene, Sonya E. and Kiczales, Gregor and Moon, David A.},
+ title = {Common Lisp Object System Specification},
+ journal = {SIGPLAN Not.},
+ issue_date = {September 1988},
+ volume = {23},
+ number = {SI},
+ month = sep,
+ year = {1988},
+ issn = {0362-1340},
+ pages = {1--142},
+ numpages = {142},
+ url = {http://doi.acm.org/10.1145/885631.885632},
+ doi = {10.1145/885631.885632},
+ acmid = {885632},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
 @article{FJ,
  author = {Igarashi, Atsushi and Pierce, Benjamin C. and Wadler, Philip},
  title = {Featherweight Java: A Minimal Core Calculus for Java and GJ},
