--- a/OTONO2016/1/Survey/survey.tex
+++ b/OTONO2016/1/Survey/survey.tex
@@ -163,8 +163,9 @@
 	\begin{abstract}
 	\end{abstract}	
 \section{Introduction}
-Explicar Overloadin, ejemplos, para que sirve. Hablar de overl 
-$\wellformed[S]$
+The list of programming languages that have incorporated overloading is very large. In this list can be included, as known languages like Scala, C++, Java and Haskell. Overloading is described as a kind of polymorphism, where one name is associated with several function implementations, and the choice in each use depends on the context where it is used.
+
+In this brief survey, we present concept related to overloading and relevant works that formalize overloading with different characteristics.
 \section{Background}\label{section:concepts}
 In this section we explain some concepts related to overloading, like polymorphism and the different kind of overloading.
 \subsection{Polymorphism}
@@ -212,15 +213,33 @@ o.m(e);}
 Multi-methods is considered a collection of overloaded methods associated to the same message, where the selection occur dynamically, according to run-time types of the reciver and of the arguments~\cite{FJM}. When selection occur dynamically, we are in presence of dynamic overloading. Thus, with this kind of overloading, in the above example of Java code, for the invocation of the method $\texttt{m}$, is select the second definition. Dynamic overloading seems to provide more flexibility and and accuracy selecting the most specialized implementation for a method invocation.
 
 Common Lisp Object System(CLSO)~\cite{Bobrow:1988:CLO:885631.885632} is an object-oriented extension to Common Lisp which implements dynamic overloading. It is worth noting that CLSO do not admit any static checking, therefore is dynamically typed. For instance, the code below in the in most languages with static type checking, results in an static error by ambiguity. However, in CLSO is considered the second implementation for  method $\texttt{m}$ more specific than the first, thus can be executed without ambiguity. In CLSO, the order of the parameters is crucial for the resolution of overloading.\\
+
 \texttt{
 class A \{\} \\
 class B extends A \{\} \\
 def m(x: A, y: B): Int = 1\\
 def m(x: B, y: A): Int = 2\\
 m(new B, new B)\\ }
-\section{Ad-hoc Polymorphism}\label{section:polymorphism}
+\section{Overloading}\label{section:polymorphism}
+In the preset section we report some different works related to the overloading field. We start with type class, a powerful mechanism which allow overloading, combined with parametric polyphormism. Then we present an interesting work that explain overloading in object-oriented programming languages, with static or dynamic overloading.
 \subsection{Type classes}
-\subsection{Featherweight Java with dynamic and static overloading}
+Type class in Haskell~\cite{wadlerBlott:popl89} is a sort of interface that defines some behavior supporting overloading
+and parametric polymorphism. Haskell has a static type system, therefore at compile time, the type of every expression is known and the overloading  is resolved. 
+
+The operator ($\texttt{==}$) for equality is widely used in most languages. Commonly overloaded, this polymorphic operator can be defined using type classes and instance declarations. The Haskell code showed below defines a type class that provides an interface for the ($\texttt{==}$) operator in a straightforward way. It is worth noting that this type class could have another functionality, like ($\texttt{/=}$). Once we have this type class, we can define instance for each different types, for instance,  \texttt{Eq Int} and \texttt{Eq Char}, where \texttt{eqInt} and \texttt{eqChar}, are the implementation for the ($\texttt{==}$) operator per each type. The class Eq is used as a constraint for  type variables  that require to support equality inspection.\\
+
+\texttt{class Eq a where\\
+(==) :: a -> a -> bool\\
+instance Eq Int where\\
+(==) = eqInt\\
+instance Eq Char where\\
+(==) = eqChar \\}
+
+As we mentioned previously, the overloading resolution in Haskell is static. For this, it is carried out 
+at compile-time a transformation of the code~\cite{wadlerBlott:popl89}. A program that contain class and instance declarations it is translated to an equivalent program that does not. The overloaded variables are also eliminated, with the introduction of "dictionaries", which include the implementation for each functionality of an instance.   
+
+Haskell supports overloading with the definition of type classes, but all the overloaded instances must share a common type pattern.
+\subsection{Overloading in Object Oriented Paradigm}
 Featherweight Multi Java (FMJ)~\cite{BETTINI2009261, FJM} is an extension of Featherweight Java (FJ)~\cite{FJ} with multi-methods. FJ is a basic version of Java, which focuses on the following set of features: class definitions, object creation, method invocation, field access, inheritance, subtyping and method recursion through $\mathsf{this}$. Figure~\ref{figure:syntax_of_FMJ} shows the syntax of FMJ, which is minimal and simple. For more explanation, it can be consulted in~\cite{BETTINI2009261}. Some important aspects to note related to overloading in these work~\cite{BETTINI2009261, FJM} are:
 \begin{itemize}
   \item All the inherited overloaded methods are copied into the subclass.
