--- a/OTONO2016/1/Survey/bib.bib
+++ b/OTONO2016/1/Survey/bib.bib
@@ -1,3 +1,42 @@
+@inproceedings{Nipkow1993,
+ author = {Nipkow, Tobias and Prehofer, Christian},
+ title = {Type Checking Type Classes},
+ booktitle = {Proceedings of the 20th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '93},
+ year = {1993},
+ isbn = {0-89791-560-7},
+ location = {Charleston, South Carolina, USA},
+ pages = {409--418},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/158511.158698},
+ doi = {10.1145/158511.158698},
+ acmid = {158698},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
+
+@article{SEIDL199457,
+title = "Haskell overloading is DEXPTIME-complete",
+journal = "Information Processing Letters",
+volume = "52",
+number = "2",
+pages = "57 - 60",
+year = "1994",
+note = "",
+issn = "0020-0190",
+doi = "http://dx.doi.org/10.1016/0020-0190(94)00130-8",
+url = "http://www.sciencedirect.com/science/article/pii/0020019094001308",
+author = "Helmut Seidl",
+keywords = "Haskell type classes",
+keywords = "Emptiness",
+keywords = "Computational complexity",
+abstract = ""
+}
+
+
+
 @article{Bobrow:1988:CLO:885631.885632,
  author = {Bobrow, Daniel G. and DeMichiel, Linda G. and Gabriel, Richard P. and Keene, Sonya E. and Kiczales, Gregor and Moon, David A.},
  title = {Common Lisp Object System Specification},
